Start index.html

--- a/plan-sistemas.html
+++ b/plan-sistemas.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags always come first -->
+    <meta charset="utf-8"/>
     <title>Plan Lic. en Sistemas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
-    <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,300italic' rel='stylesheet' type='text/css'>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css"/>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"/>
+    <!-- Page Style -->
+    <link rel="stylesheet" href="css/style.css"/><link rel="stylesheet" href="css/diagram.css">
 
 
     <script src="js/go.js"></script>
     <script src="js/DiagramFactory.js"></script>
     <script src="js/PlanSistemas.js"></script>
-
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-light bg-faded navbar-fixed-top" style="background: transparent">
+            <div class="container">
+                <a class="navbar-brand" href="index.html">Planes de Informática</a>
+            </div>
+        </nav>
+    </header>
 
     <div id="myDiagram"></div>
 
