--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8"/>
+    <title>Planes Informática</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
