change title box

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8"/>
+    <title>Planes de la Facultad de Informática</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
 
@@ -21,9 +22,9 @@
 
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-lg-4 col-sm-offset-3 col-lg-offset-4">
-                    <a href="./plan-sistemas.html">
+                    <a href="plan-sistemas.html">
                         <article class="box sistemas-2015">
-                            <h1>Plan Sistemas</h1>
+                            <h1>Sistemas 2015</h1>
                             <p>Plan Licenciatura en Sistemas - 2015</p>
                         </article>
                     </a>
