--- a/index.html
+++ b/index.html
@@ -21,11 +21,19 @@
             <h1>Planes de <!-- la Facultad de --> Informatica</h1>
 
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-lg-4 col-sm-offset-3 col-lg-offset-4">
+                <div class="col-xs-12 col-sm-6 col-lg-4 col-lg-offset-2">
                     <a href="plan-sistemas.html">
                         <article class="box sistemas-2015">
                             <h1>Sistemas 2015</h1>
                             <p>Plan Licenciatura en Sistemas - 2015</p>
+                        </article>
+                    </a>
+                </div>
+                <div class="col-xs-12 col-sm-6 col-lg-4">
+                    <a href="plan-Informatica.html">
+                        <article class="box sistemas-2015">
+                            <h1>Informática 2015</h1>
+                            <p>Plan Licenciatura en Informática - 2015</p>
                         </article>
                     </a>
                 </div>
